testing/tests/ui/named_filter_arguments.stderr
error: named arguments must always be passed last
 --> <source attribute>:1:47
       "(pl = \"ies\", \"y\") }}."
 --> tests/ui/named_filter_arguments.rs:5:14
  |
5 |     source = r#"I have {{ count }} butterfl{{ count | pluralize(pl = "ies", "y") }}."#,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: named argument `pl` was passed more than once
 --> <source attribute>:1:47
       "(pl = \"y\", pl = \"ies\") }}."
  --> tests/ui/named_filter_arguments.rs:14:14
   |
14 |     source = r#"I have {{ count }} butterfl{{ count | pluralize(pl = "y", pl = "ies") }}."#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: argument `sg` was already set
 --> NamedButAlreadyPositional.txt:1:47
       "(\"y\", sg = \"ies\") }}."
  --> tests/ui/named_filter_arguments.rs:23:14
   |
23 |     source = r#"I have {{ count }} butterfl{{ count | pluralize("y", sg = "ies") }}."#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: filter `pluralize` does not have an argument `plural`; ; it's arguments are: ([sg], [pl])
 --> NoSuchNamedArgument.txt:1:47
       "(\"y\", plural = \"ies\") }}."
  --> tests/ui/named_filter_arguments.rs:32:14
   |
32 |     source = r#"I have {{ count }} butterfl{{ count | pluralize("y", plural = "ies") }}."#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: filter `uppercase` does not have any arguments
 --> NamedArgumentButNoArgumentExpected.txt:1:30
       "(case = \"upper\") }}"
  --> tests/ui/named_filter_arguments.rs:41:14
   |
41 |     source = r#"Scream: {{ message | uppercase(case = "upper") }}"#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
